--- a/app/views/lodging_confirmations/index.html.erb
+++ b/app/views/lodging_confirmations/index.html.erb
@@ -23,6 +23,7 @@
       <div>F</div>
       <div>S</div>
       <div>S</div>
+      
     </div>
         <!--
           Always include: "mx-auto flex h-8 w-8 items-center justify-center rounded-full"
@@ -65,6 +66,9 @@
             >
               <time datetime="<%= date %>"><%= date.is_a?(LodgingConfirmation) ? date.date.day : date.day %></time>
             </button>
+            <div class="button-group" style="width:140pdx">
+              <%= button_to "o", class: "button-1", form: { style: 'float: left' } %><%= button_to "x", class: "button-2", form: { style: 'float: left'} %>
+            </div>
           </div>
         <% end %>
     </div>
